--- a/index.html
+++ b/index.html
@@ -304,37 +304,79 @@
                 <div class="wpo-about-funfact">
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="98">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="70"
+                          src="assets/images/icon/php2.svg"
+                          title="PHP Skill"
+                          alt="PHP"
+                        />
+                      </h3>
                       <p>PHP</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="92">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="70"
+                          src="assets/images/icon/mysql2.svg"
+                          title="MySQL Database Skill"
+                          alt="MySQL"
+                        />
+                      </h3>
                       <p>MySQL</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="88">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="70"
+                          src="assets/images/icon/photoshop.svg"
+                          title="Photoshop Editing Skill"
+                          alt="Photoshop"
+                        />
+                      </h3>
                       <p>Photoshop</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="72">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="70"
+                          src="assets/images/icon/illustrator.svg"
+                          title="Illustrator Skill"
+                          alt="Illustrator"
+                        />
+                      </h3>
                       <p>Illustrator</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="43">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="50"
+                          src="assets/images/icon/flutter3.svg"
+                          title="Flutter Cross Platform App Developer"
+                          alt="Flutter"
+                        />
+                      </h3>
                       <p>Flutter</p>
                     </div>
                   </div>
                   <div class="grid">
                     <div class="grid-inner">
-                      <h3><span class="odometer" data-count="37">00</span>%</h3>
+                      <h3>
+                        <img
+                          width="70"
+                          src="assets/images/icon/react.svg"
+                          title="ReactJS Skill"
+                          alt="ReactJS"
+                        />
+                      </h3>
                       <p>ReactJS</p>
                     </div>
                   </div>
@@ -427,172 +469,44 @@
             </div>
           </div>
           <div class="wpo-service-wrap">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item" role="presentation">
-                <a
-                  class="nav-link"
-                  id="Development-tab"
-                  data-bs-toggle="tab"
-                  href="#Development"
-                  role="tab"
-                  aria-controls="Development"
-                  aria-selected="true"
-                  >Development</a
-                >
-              </li>
-              <li class="nav-item" role="presentation">
-                <a
-                  class="nav-link active"
-                  id="Design-tab"
-                  data-bs-toggle="tab"
-                  href="#Design"
-                  role="tab"
-                  aria-controls="Design"
-                  aria-selected="false"
-                  >Design</a
-                >
-              </li>
-              <li class="nav-item" role="presentation">
-                <a
-                  class="nav-link"
-                  id="Marketing-tab"
-                  data-bs-toggle="tab"
-                  href="#Marketing"
-                  role="tab"
-                  aria-controls="Marketing"
-                  aria-selected="false"
-                  >Marketing</a
-                >
-              </li>
-            </ul>
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane" id="Development">
-                <div class="row align-items-center">
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-coding"></i>
-                      </div>
-                      <h2>Web Development</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
+            <div class="row align-items-center">
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-coding"></i>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-app-development"></i>
-                      </div>
-                      <h2>App Development</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-smartphone"></i>
-                      </div>
-                      <h2>Softwere Development</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
+                  <h2>Web Development</h2>
+                  <p>
+                    Explain to you how all this mistaken idea of denouncing
+                    pleasure born and give you complete account the system.
+                  </p>
+                  <a href="service-single.html">Learn More</a>
                 </div>
               </div>
-              <div role="tabpanel" class="tab-pane active" id="Design">
-                <div class="row align-items-center">
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-vector"></i>
-                      </div>
-                      <h2>Graphic Design</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-app-development"></i>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-palette"></i>
-                      </div>
-                      <h2>Brand Identity</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-add"></i>
-                      </div>
-                      <h2>UI/UX Design</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
+                  <h2>App Development</h2>
+                  <p>
+                    Explain to you how all this mistaken idea of denouncing
+                    pleasure born and give you complete account the system.
+                  </p>
+                  <a href="service-single.html">Learn More</a>
                 </div>
               </div>
-              <div role="tabpanel" class="tab-pane" id="Marketing">
-                <div class="row align-items-center">
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-social-media"></i>
-                      </div>
-                      <h2>Social Media Marketing</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-smartphone"></i>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-promotion"></i>
-                      </div>
-                      <h2>Digital Marketing</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-12">
-                    <div class="wpo-service-item">
-                      <div class="icon">
-                        <i class="fi flaticon-email-marketing"></i>
-                      </div>
-                      <h2>Email Marketing</h2>
-                      <p>
-                        Explain to you how all this mistaken idea of denouncing
-                        pleasure born and give you complete account the system.
-                      </p>
-                      <a href="service-single.html">Learn More</a>
-                    </div>
-                  </div>
+                  <h2>Softwere Development</h2>
+                  <p>
+                    Explain to you how all this mistaken idea of denouncing
+                    pleasure born and give you complete account the system.
+                  </p>
+                  <a href="service-single.html">Learn More</a>
                 </div>
               </div>
             </div>
@@ -836,7 +750,7 @@
       <!-- end of wpo-project-area -->
 
       <!--Start wpo-testimonial-section-->
-      <section class="wpo-testimonial-section section-padding">
+      <section class="wpo-testimonial-section wpo-blog-section section-padding">
         <div class="container">
           <div class="wpo-testimonial-wrap">
             <div class="row align-items-center">
@@ -1084,12 +998,13 @@
                 <div class="widget about-widget">
                   <div class="logo widget-title">
                     <a class="site-logo" href="index-2.html"
-                      ><img src="assets/images/logo.png" alt="" />Elito.</a
+                      ><img src="assets/images/logo.png" alt="" />MD.Riaz</a
                     >
                   </div>
                   <p>
-                    Welcome and open yourself to your truest love this year with
-                    us! With the Release Process
+                    Building digital products, brands and experience. I
+                    specialize in creating digital products, brands and
+                    experiences that are simple, beautiful and meaningful.
                   </p>
                   <div class="social-icons">
                     <ul>
@@ -1207,7 +1122,7 @@
             <div class="row">
               <div class="separator"></div>
               <p class="copyright">
-                Copyright &copy; 2022 Elito. All rights reserved.
+                Copyright &copy; 2022 MD.Riaz All rights reserved.
               </p>
             </div>
           </div>
