--- a/index.html
+++ b/index.html
@@ -845,50 +845,36 @@
                   <div class="slider-nav">
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Hard Worker</h4>
                         <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
+                          I have seen him as like an unexplained sentence. he is
+                          a great efficient & hard worker also dedicated to his
+                          won work. I appreciate his professional life.
                         </p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>Cathi Falcon, <span>Software Engineer</span></h3>
+                          <h3>Abdur Rahim, <span>Branch Manager</span></h3>
                         </div>
                       </div>
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Interpersonal Skills</h4>
                         <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
+                          MD Riaz did an exceptional job on recent projects. As
+                          I remember, MD Riaz was a very productive person and a
+                          multi-skilled person with vast knowledge. It's a
+                          pleasure working with MD Riaz. Thanks to his
+                          interpersonal skills, He has great relations with both
+                          company clients and potential customers.
                         </p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>
-                            Robert Johnson, <span>Software Developer</span>
-                          </h3>
+                          <h3>Md Baijid Hossain, <span>Web Developer</span></h3>
                         </div>
                       </div>
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Testimonial 3</h4>
                         <p>
                           It is a long established fact that a reader will be
                           distracted by the readable content of page when
@@ -904,10 +890,7 @@
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Testimonial 4</h4>
                         <p>
                           It is a long established fact that a reader will be
                           distracted by the readable content of page when
@@ -923,10 +906,7 @@
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Testimonial 5</h4>
                         <p>
                           It is a long established fact that a reader will be
                           distracted by the readable content of page when
@@ -942,10 +922,7 @@
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>
-                          Many desktop publishing packages and editors now use
-                          as their.
-                        </h4>
+                        <h4>Testimonial 6</h4>
                         <p>
                           It is a long established fact that a reader will be
                           distracted by the readable content of page when
@@ -994,7 +971,7 @@
         <div class="upper-footer">
           <div class="container">
             <div class="row">
-              <div class="col col-lg-4 col-md-6 col-12">
+              <div class="col col-md-6 col-12">
                 <div class="widget about-widget">
                   <div class="logo widget-title">
                     <a class="site-logo" href="index-2.html"
@@ -1009,58 +986,56 @@
                   <div class="social-icons">
                     <ul>
                       <li>
-                        <a href="#"><i class="ti-facebook"></i></a>
+                        <a href="https://github.com/md-riaz"
+                          ><i class="ti-github"></i
+                        ></a>
                       </li>
                       <li>
-                        <a href="#"><i class="ti-twitter-alt"></i></a>
+                        <a href="https://facebook.com/mdriaz.official"
+                          ><i class="ti-facebook"></i
+                        ></a>
                       </li>
                       <li>
-                        <a href="#"><i class="ti-linkedin"></i></a>
+                        <a href="https://twitter.com/mdriazwd"
+                          ><i class="ti-twitter-alt"></i
+                        ></a>
                       </li>
                       <li>
-                        <a href="#"><i class="ti-pinterest"></i></a>
+                        <a href="https://www.linkedin.com/in/md-riaz"
+                          ><i class="ti-linkedin"></i
+                        ></a>
                       </li>
                       <li>
-                        <a href="#"><i class="ti-vimeo-alt"></i></a>
+                        <a
+                          href="https://www.youtube.com/channel/UC5n-9_taYq4eeQgkh24ZZHg/"
+                          ><i class="ti-youtube"></i
+                        ></a>
                       </li>
                     </ul>
                   </div>
                 </div>
               </div>
-              <div class="col col-lg-2 col-md-6 col-12">
+              <div class="col col-lg-3 col-md-6 col-12">
                 <div class="widget link-widget">
                   <div class="widget-title">
                     <h3>Navigation</h3>
                   </div>
                   <ul>
-                    <li><a href="#about">About us</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="#video">Video Guide</a></li>
-                    <li><a href="blog.html">Recent Post</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#skills">Skills</a></li>
                   </ul>
                 </div>
               </div>
-              <div class="col col-lg-3 col-md-6 col-12">
-                <div class="widget link-widget service-link-widget">
-                  <div class="widget-title">
-                    <h3>All Services</h3>
-                  </div>
-                  <ul>
-                    <li><a href="service-single.html">Web Design</a></li>
-                    <li><a href="service-single.html">Web Development</a></li>
-                    <li><a href="service-single.html">Brand Identity</a></li>
-                    <li><a href="service-single.html">Digital Marketing</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col col-lg-3 col-md-6 col-12">
+              <div class="col col-lg-3 col-12">
                 <div class="widget newsletter-widget">
                   <div class="widget-title">
                     <h3>Newsletter</h3>
                   </div>
                   <p>
-                    Must explain to you how all this mistaken idea pleasure born
-                    and give you a complete account.
+                    Keep up my latest news and events. Subscribe to my
+                    newsletter.
                   </p>
                   <form>
                     <div class="input-1">
@@ -1069,6 +1044,7 @@
                         class="form-control"
                         placeholder="Email Address *"
                         required
+                        disabled
                       />
                     </div>
                     <div class="submit clearfix">
