--- a/index.html
+++ b/index.html
@@ -872,67 +872,58 @@
                         </div>
                       </div>
                     </div>
+
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>Testimonial 3</h4>
-                        <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
-                        </p>
+                        <h4>Mithun</h4>
+                        <p>...</p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>Jenelia Orkid, <span>Web Designer</span></h3>
+                          <h3>
+                            Mithun Sutradhar, <span>Web Team Leader</span>
+                          </h3>
                         </div>
                       </div>
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>Testimonial 4</h4>
+                        <h4>Creative Person</h4>
                         <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
+                          Md. Riaz is a good and creative person ever seen. His
+                          work capacity, creativity, and intelligence are the
+                          actual core. . I was impressed by Md. Riaz ability to
+                          handle any situation calmly and patiently, even with
+                          the toughest clients. He is a trusted colleague.
                         </p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>Cathi Falcon, <span>Software Enginee</span></h3>
+                          <h3>Md Golam Rabbani, <span>Web Designer</span></h3>
                         </div>
                       </div>
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>Testimonial 5</h4>
+                        <h4>Helpful Person</h4>
                         <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
+                          I highly recommend Md. Riaz. Riaz has guided me in
+                          learning and developing my skills in Flutter and PHP.
+                          He's positive and helpful. He has never hesitated to
+                          offer assistance when needed.
                         </p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>Cathi Falcon, <span>Software Enginee</span></h3>
+                          <h3>
+                            Abu Talha, <span>Developer & Ecommerce Expert</span>
+                          </h3>
                         </div>
                       </div>
                     </div>
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>Testimonial 6</h4>
+                        <h4>Full-Stack Developer</h4>
                         <p>
-                          It is a long established fact that a reader will be
-                          distracted by the readable content of page when
-                          looking at its layout point of using is that it has
-                          more-or-less normal distribution of letters, as
-                          opposed to using 'Content here, content here', making
-                          look like readable English.
+                          Very good passionate full-stack developer. and also an
+                          android developer.
                         </p>
                         <div class="wpo-testimonial-text-btm">
-                          <h3>Cathi Falcon, <span>Software Enginee</span></h3>
+                          <h3>Md. Nazrul Islam, <span>PHP Developer</span></h3>
                         </div>
                       </div>
                     </div>
