--- a/index.html
+++ b/index.html
@@ -460,10 +460,11 @@
           <div class="row justify-content-center">
             <div class="col-lg-6 col-12">
               <div class="wpo-section-title">
-                <h2>Popular Services</h2>
+                <h2>Professional Skills</h2>
                 <p>
-                  Must explain to you how all this mistaken idea of denouncing
-                  pleasure born and give you a complete account the system
+                  In today's world, it's important to have a variety of skills.
+                  I have several skills that I can use to help you with your
+                  project.
                 </p>
               </div>
             </div>
@@ -475,12 +476,12 @@
                   <div class="icon">
                     <i class="fi flaticon-coding"></i>
                   </div>
-                  <h2>Web Development</h2>
+                  <h2>PHP</h2>
                   <p>
-                    Explain to you how all this mistaken idea of denouncing
-                    pleasure born and give you complete account the system.
+                    PHP is a server-side scripting language designed for web
+                    development but also used as a general-purpose programming
+                    language.
                   </p>
-                  <a href="service-single.html">Learn More</a>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-12">
@@ -488,12 +489,12 @@
                   <div class="icon">
                     <i class="fi flaticon-app-development"></i>
                   </div>
-                  <h2>App Development</h2>
+                  <h2>MySQL</h2>
                   <p>
-                    Explain to you how all this mistaken idea of denouncing
-                    pleasure born and give you complete account the system.
+                    MySQL is an open-source relational database management
+                    system. SQL is a language programmers use to create, modify
+                    and extract data from the database.
                   </p>
-                  <a href="service-single.html">Learn More</a>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-12">
@@ -501,12 +502,171 @@
                   <div class="icon">
                     <i class="fi flaticon-smartphone"></i>
                   </div>
-                  <h2>Softwere Development</h2>
+                  <h2>JavaScript</h2>
                   <p>
-                    Explain to you how all this mistaken idea of denouncing
-                    pleasure born and give you complete account the system.
+                    JavaScript, often abbreviated as JS, is a programming
+                    language that is one of the core technologies of the World
+                    Wide Web, alongside HTML and CSS.
                   </p>
-                  <a href="service-single.html">Learn More</a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-coding"></i>
+                  </div>
+                  <h2>jQuery</h2>
+                  <p>
+                    jQuery is a JavaScript library designed to simplify HTML DOM
+                    tree traversal and manipulation, as well as event handling,
+                    CSS animation, and Ajax.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-app-development"></i>
+                  </div>
+                  <h2>React</h2>
+                  <p>
+                    React is an open-source, front end, JavaScript library for
+                    building user interfaces or UI components. It is maintained
+                    by Facebook.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-smartphone"></i>
+                  </div>
+                  <h2>ExpressJs</h2>
+                  <p>
+                    Express.js, or simply Express, is a back end web application
+                    framework for Node.js, released as free and open-source
+                    software under the MIT License.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-coding"></i>
+                  </div>
+                  <h2>jQuery</h2>
+                  <p>
+                    jQuery is a JavaScript library designed to simplify HTML DOM
+                    tree traversal and manipulation, as well as event handling,
+                    CSS animation, and Ajax.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-app-development"></i>
+                  </div>
+                  <h2>Bootstrap</h2>
+                  <p>
+                    Bootstrap is a free and open-source CSS framework directed
+                    at responsive, mobile-first front-end web development. It
+                    contains CSS- and JavaScript-based design templates for
+                    interface components.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-smartphone"></i>
+                  </div>
+                  <h2>Tailwind CSS</h2>
+                  <p>
+                    Tailwind CSS is a utility-first CSS framework for rapidly
+                    building custom user interfaces. It is a highly
+                    customizable, low-level CSS framework that gives you all of
+                    the building blocks you need to build bespoke designs.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-coding"></i>
+                  </div>
+                  <h2>SCSS</h2>
+                  <p>
+                    Sass is a preprocessor scripting language that is
+                    interpreted or compiled into Cascading Style Sheets (CSS).
+                    SassScript is the scripting language itself.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-app-development"></i>
+                  </div>
+                  <h2>Flutter</h2>
+                  <p>
+                    Flutter is Google's UI toolkit for building beautiful,
+                    natively compiled applications for mobile, web, and desktop
+                    from a single codebase.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-smartphone"></i>
+                  </div>
+                  <h2>Git & Github</h2>
+                  <p>
+                    Git is a distributed version-control system for tracking
+                    changes in source code during software development. Github
+                    is a web-based hosting service for version control using
+                    Git.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-coding"></i>
+                  </div>
+                  <h2>REST API</h2>
+                  <p>
+                    REST is an architectural style for providing standards
+                    between computer systems on the web, making it easier for
+                    systems to communicate with each other.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-app-development"></i>
+                  </div>
+                  <h2>Photoshop</h2>
+                  <p>
+                    Adobe Photoshop is a raster graphics editor developed and
+                    published by Adobe Inc. for macOS and Windows. It was
+                    originally created in 1988 by Thomas and John Knoll.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-service-item">
+                  <div class="icon">
+                    <i class="fi flaticon-smartphone"></i>
+                  </div>
+                  <h2>Illustrator</h2>
+                  <p>
+                    Adobe Illustrator is a vector graphics editor developed and
+                    marketed by Adobe Inc. Originally designed for the Apple
+                    Macintosh, development of Adobe Illustrator began in 1985.
+                  </p>
                 </div>
               </div>
             </div>
@@ -749,6 +909,33 @@
       </div>
       <!-- end of wpo-project-area -->
 
+      <!-- wpo-partners-area-start -->
+      <section class="partners-section">
+        <h2 class="hidden">partner</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col col-xs-12">
+              <div class="partner-grids partners-slider owl-carousel clearfix">
+                <div class="grid">
+                  <img width="100" src="assets/images/partners/1.png" alt="" />
+                </div>
+                <div class="grid">
+                  <img width="100" src="assets/images/partners/2.png" alt="" />
+                </div>
+                <div class="grid">
+                  <img width="100" src="assets/images/partners/3.png" alt="" />
+                </div>
+                <div class="grid">
+                  <img width="100" src="assets/images/partners/4.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end contianer -->
+      </section>
+      <!-- partners-area-end -->
+
       <!--Start wpo-testimonial-section-->
       <section class="wpo-testimonial-section wpo-blog-section section-padding">
         <div class="container">
@@ -875,8 +1062,17 @@
 
                     <div class="wpo-testimonial-item">
                       <div class="wpo-testimonial-text">
-                        <h4>Mithun</h4>
-                        <p>...</p>
+                        <h4>Multi-skilled</h4>
+                        <p>
+                          MD Riaz is a fantastic person to work with and is not
+                          only a multi-skilled and insightful colleague but also
+                          an inspiring strategist. Very good person. A great
+                          employee with very strong problem-solving skills. MD
+                          Riaz is an asset to any company. I work with him
+                          closely. He helped me a lot of time in programming. If
+                          I say something to him, it will be less than his
+                          skill.
+                        </p>
                         <div class="wpo-testimonial-text-btm">
                           <h3>
                             Mithun Sutradhar, <span>Web Team Leader</span>
